deployments/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  labels:
    app: weather
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: registry.digitalocean.com/ryansheppard/weather:46 # {"$imagepolicy": "default:weather-api"}
          command:
            - "/weather"
          ports:
            - containerPort: 1323
              name: http
            - containerPort: 1324
              name: prometheus
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: http
              path: /help
            initialDelaySeconds: 5
            periodSeconds: 10
