deployments/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  ports:
  - name: weather
    port: 1323
    protocol: TCP
    targetPort: 1323
  selector:
    app: weather
  type: ClusterIP
