deployments/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
spec:
  ingressClassName: nginx
  rules:
    - host: w.ryansheppard.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  weather
                port:
                  number: 1323
